--- a/main.html
+++ b/main.html
@@ -10,7 +10,44 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	 <form action="/submit" method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Name" required><br>
 
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Email" required><br>
+
+		<label for="gender">Gender</label> 
+        <label for="gender_m">Male</label>
+        <input type="radio" id="gender_m" name="gender" required>
+        <label for="gender_f">FeMale</label>
+        <input type="radio" id="gender_f" name="gender" required><br>
+
+        <label for="cars">Car Brand</label>
+        <select id="cars" required>
+            <option>CB1</option>
+            <option>CB2</option>
+            <option>CB3</option>
+        </select><br>
+        
+        <label for="age">Age</label>
+        <input type="number" id="age" placeholder="Age" required><br>
+
+        <label for="dob"></label>
+        <input type="date" id="dob" required><br>
+
+        <label for="tel">Phone Number</label>
+        <input type="tel" id="tel" placeholder="xxx-xxx-xxxx"><br>
+
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Password" required><br>
+
+        <label for="tos">I agree to the TOS</label>
+        <input type="checkbox" id="tos" required><br>
+
+        <input type="submit" value="sub" id="btn">
+
+    </form>
 </body>
 
 </html>
