--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <label for="age">Age</label>
         <input type="number" id="age" placeholder="Age" required><br>
 
-        <label for="dob"></label>
+        <label for="dob">DOB</label>
         <input type="date" id="dob" required><br>
 
         <label for="tel">Phone Number</label>
