--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <label for="email">Email</label>
         <input type="email" id="email" placeholder="Email" required><br>
 
-		<label for="gender">Gender</label> 
+		<!-- <label for="gender">Gender</label>  -->
         <label for="gender_m">Male</label>
         <input type="radio" id="gender_m" name="gender" required>
         <label for="gender_f">FeMale</label>
@@ -45,7 +45,7 @@
         <label for="tos">I agree to the TOS</label>
         <input type="checkbox" id="tos" required><br>
 
-        <input type="submit" value="sub" id="btn">
+        <input type="submit" value="submit" id="btn">
 
     </form>
 </body>
