--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
         <label for="tos">I agree to the TOS</label>
         <input type="checkbox" id="tos" required><br>
 
-        <button type="submit"></button>
+        <button type="submit">Submit</button>
 
     </form>
 </body>
